--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,56 @@
 
 </style>
 
-<main class="main">
-    <p-button label="Submit" />
+<main class="main p-8 flex flex-col gap-4">
+
+    <div class="flex gap-2">
+        <p-floatlabel variant="on">
+            <input pInputText id="on_label" [(ngModel)]="newItemName" autocomplete="off" />
+            <label for="on_label">Name</label>
+        </p-floatlabel>
+
+        <p-button label="Add item" icon="pi pi-plus" (click)="addItemButton()" />
+    </div>
+
+    <p-table [value]="list" [tableStyle]="{ 'min-width': '50rem' }">
+    <ng-template #header>
+        <tr>
+            <th>State</th>
+            <th>Name</th>
+            <th>Modifiers</th>
+        </tr>
+    </ng-template>
+    <ng-template #body let-row>
+        <tr todo-item>
+            <td>
+                <p-button [icon]="'pi pi-' + todoToIcon()" outlined></p-button>
+
+                <!--
+                <p-select  [options]="todoStates" (onChange)="changeTodoState(row.no, $event)" class="w-min">
+                    <ng-template #selectedItem let-selectedOption>
+                        <div class="flex items-center gap-2" *ngIf="selectedOption">
+                            <span [class]="'pi pi-' + todoToIcon(selectedOption)" style="font-size: 1rem;"></span>
+                        </div>
+                    </ng-template>
+                    <ng-template let-item #item>
+                        <div class="flex items-center gap-2">
+                            <span [class]="'pi pi-' + todoToIcon(item)"></span>
+                            <span>{{ capitalize(item) }}</span>
+                        </div>
+                    </ng-template>
+                    <ng-template #dropdownicon>
+                    </ng-template>
+                </p-select>
+                -->
+            </td>
+            <td class="w-full text-base">{{ row.name }}</td>
+            <td class="flex gap-2">
+                <p-button icon="pi pi-pencil" />
+                <p-button icon="pi pi-trash" severity="danger" />
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
 </main>
 
 <router-outlet />
