--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,34 +22,7 @@
         </tr>
     </ng-template>
     <ng-template #body let-row>
-        <tr todo-item>
-            <td>
-                <p-button [icon]="'pi pi-' + todoToIcon()" outlined></p-button>
-
-                <!--
-                <p-select  [options]="todoStates" (onChange)="changeTodoState(row.no, $event)" class="w-min">
-                    <ng-template #selectedItem let-selectedOption>
-                        <div class="flex items-center gap-2" *ngIf="selectedOption">
-                            <span [class]="'pi pi-' + todoToIcon(selectedOption)" style="font-size: 1rem;"></span>
-                        </div>
-                    </ng-template>
-                    <ng-template let-item #item>
-                        <div class="flex items-center gap-2">
-                            <span [class]="'pi pi-' + todoToIcon(item)"></span>
-                            <span>{{ capitalize(item) }}</span>
-                        </div>
-                    </ng-template>
-                    <ng-template #dropdownicon>
-                    </ng-template>
-                </p-select>
-                -->
-            </td>
-            <td class="w-full text-base">{{ row.name }}</td>
-            <td class="flex gap-2">
-                <p-button icon="pi pi-pencil" />
-                <p-button icon="pi pi-trash" severity="danger" />
-            </td>
-        </tr>
+        <tr app-entry todo-item [todoItem]="row"></tr>
     </ng-template>
 </p-table>
 </main>
