--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,27 @@
 </style>
 
 <main class="main p-8 flex flex-col gap-4">
-
-    <div class="flex gap-2">
-        <p-floatlabel variant="on">
-            <input pInputText id="on_label" [(ngModel)]="newItemName" autocomplete="off" />
-            <label for="on_label">Name</label>
-        </p-floatlabel>
-
-        <p-button label="Add item" icon="pi pi-plus" (click)="addItemButton()" />
-    </div>
+    <p-toolbar>
+        <ng-template #start>
+            <p-button icon="pi pi-plus" class="mr-2" text severity="secondary" />
+            <p-floatlabel variant="on">
+                <input pInputText id="on_label" [(ngModel)]="newItemName" autocomplete="off" size="small"/>
+                <label for="on_label">Name</label>
+            </p-floatlabel>
+        </ng-template>
+        <ng-template #center>
+            <div class="flex gap-2 items-center">
+                <p-iconfield iconPosition="left">
+                    <p-inputicon styleClass="pi pi-search" />
+                    <input type="text" pInputText placeholder="Search" />
+                </p-iconfield>
+                <p-button icon="pi pi-star" severity="secondary" (click)="toggleInvert()" />
+            </div>
+        </ng-template>
+        <ng-template #end>
+            <p-button icon="pi pi-palette" severity="secondary" (click)="toggleInvert()" />
+        </ng-template>
+    </p-toolbar>
 
     <p-table [value]="list" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template #header>
