--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,23 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    @apply bg-zinc-50;
+}
+
+body.invert::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  mix-blend-mode: difference;
+  pointer-events: none;
+  z-index: 1000;
+}
+
 .main {
     font-family: "Inter", sans-serif;
     @apply text-sm;
