--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,11 @@
 </style>
 
 <main class="main p-8 flex flex-col gap-4">
+    <h1 class="text-2xl text-zinc-600 font-medium">Todo app</h1>
+
     <p-toolbar>
         <ng-template #start>
-            <p-button icon="pi pi-plus" class="mr-2" text severity="secondary" />
-            <p-floatlabel variant="on">
-                <input pInputText id="on_label" [(ngModel)]="newItemName" autocomplete="off" size="small"/>
-                <label for="on_label">Name</label>
-            </p-floatlabel>
+            <p-button icon="pi pi-plus" class="mr-2" text severity="secondary" (onClick)="addItemButton()" />
         </ng-template>
         <ng-template #center>
             <div class="flex gap-2 items-center">
@@ -17,7 +15,7 @@
                     <p-inputicon styleClass="pi pi-search" />
                     <input type="text" pInputText placeholder="Search" />
                 </p-iconfield>
-                <p-button icon="pi pi-star" severity="secondary" (click)="toggleInvert()" />
+                <p-button icon="pi pi-star" severity="secondary" />
             </div>
         </ng-template>
         <ng-template #end>
@@ -25,18 +23,20 @@
         </ng-template>
     </p-toolbar>
 
-    <p-table [value]="list" [tableStyle]="{ 'min-width': '50rem' }">
-    <ng-template #header>
-        <tr>
-            <th>State</th>
-            <th>Name</th>
-            <th>Modifiers</th>
-        </tr>
-    </ng-template>
-    <ng-template #body let-row>
-        <tr app-entry todo-item [todoItem]="row" (onDelete)="onItemDelete($event)" (onModify)="onItemListModify()"></tr>
-    </ng-template>
-</p-table>
+    <div class="rounded-md border-zinc-200 border-1 border overflow-hidden">
+        <p-table [value]="list" [tableStyle]="{ 'min-width': '50rem' }">
+            <ng-template #header>
+                <tr>
+                    <th>State</th>
+                    <th>Name</th>
+                    <th>Modifiers</th>
+                </tr>
+            </ng-template>
+            <ng-template #body let-row>
+                <tr app-entry todo-item [todoItem]="row" (onDelete)="onItemDelete($event)" (onModify)="onItemListModify()"></tr>
+            </ng-template>
+        </p-table>
+    </div>
 </main>
 
 <router-outlet />
