uuid numerical id helyett

--- a/src/app/entry/entry.component.html
+++ b/src/app/entry/entry.component.html
@@ -42,5 +42,5 @@
     </p-inplace>
 </td>
 <td class="flex gap-2 justify-center items-center">
-    <p-button icon="pi pi-trash" severity="danger" (onClick)="onDelete.emit(todoItem.no)" />
+    <p-button icon="pi pi-trash" severity="danger" (onClick)="onDelete.emit(todoItem.id)" />
 </td>
