--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
             <ng-template #header>
                 <tr>
                     <th>State</th>
+                    <th>Fav</th>
                     <th>Name</th>
                     <th>Modifiers</th>
                 </tr>
