--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
             <div class="flex gap-2 items-center">
                 <p-iconfield iconPosition="left">
                     <p-inputicon styleClass="pi pi-search" />
-                    <input type="text" pInputText placeholder="Search" />
+                    <input type="text" pInputText placeholder="Search" [(ngModel)]="filter" />
                 </p-iconfield>
                 <!-- 
                     <p-button icon="pi pi-star" severity="secondary" />
