--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <style>
-
 </style>
 
 <main class="main p-8 flex flex-col gap-4">
@@ -26,7 +25,7 @@
         </ng-template>
     </p-toolbar>
 
-    <div class="rounded-md border-zinc-200 border-1 border overflow-hidden">
+    <div class="rounded-md border-1 border overflow-hidden menotable">
         <p-table [value]="list" [tableStyle]="{ 'min-width': '50rem' }">
             <ng-template #header>
                 <tr>
