--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,23 +5,15 @@
 @tailwind components;
 @tailwind utilities;
 
-body:not(.invert) {
-  @apply bg-zinc-50;
-}
-
-body.invert::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  mix-blend-mode: difference;
-  pointer-events: none;
-  z-index: 1000;
-}
-
 .main {
   font-family: "Inter", sans-serif;
   @apply text-sm;
+}
+
+html:not(.dark) .menotable {
+    border-color: var(--p-surface-200);
+}
+
+html.dark .menotable {
+    border-color: var(--p-surface-700);
 }
